# coding-harness-tracing

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  install-ax-trace.ps1  install-ax-trace.sh  install.bat  install.sh  pyproject.toml
.agents/skills/code-review/: SKILL.md
.claude-plugin/: marketplace.json
.cursor/: environment.json
.cursor-plugin/: marketplace.json
.cursor/hooks/: arize-cloud-env.example  arize-cursor-cloud-setup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  release-ax-trace.yml  test-ax-trace.yml
cmd/ax-trace/: .goreleaser.yml  config.go  config_test.go  diagnostics_test.go  doctor.go  doctor_test.go  go.mod  install.go  install_test.go  uninstall.go  update.go  update_helpers_test.go  version.go
cmd/ax-trace/internal/bootstrap/: lock.go
cmd/ax-trace/internal/doctor/: checks.go  doctor.go
cmd/ax-trace/internal/paths/: paths_test.go
cmd/ax-trace/internal/version/: version.go  version_test.go
core/: common.py  config.py  constants.py  event_model.py
core/setup/: __init__.py  codex.py  copilot.py  omp.py  opencode.py
core/vscode_bridge/: cli.py  install.py  models.py  status.py
signatures/version1/: cla.json
tests/: conftest.py  test_verbose_config.py  test_vscode_bridge_cli.py  test_vscode_bridge_install.py  test_vscode_bridge_models.py  test_vscode_bridge_status.py
tests/core/: test_common.py  test_config.py  test_event_model.py  test_hook_registrations.py  test_install.py  test_macos_ssl_fix.py  test_setup.py  test_setup_shared.py  test_shell_router.py  test_wire_entry_points.py
tests/fixtures/codex/: rollout_two_responses.jsonl
tests/tracing/antigravity/: test_antigravity_entry_points.py  test_antigravity_install.py
tests/tracing/antigravity/fixtures/: transcript.jsonl  transcript_full.jsonl
tests/tracing/claude/: test_claude_adapter.py  test_claude_agent_sdk.py  test_claude_fixtures.py  test_claude_high_fidelity.py  test_claude_hook.py  test_claude_hook_compact.py  test_claude_hook_failure.py  test_claude_hook_permission_denied.py  test_claude_hook_subagent_start.py  test_claude_hook_user_prompt_expansion.py  test_claude_span_renderer.py  test_claude_tool_buffer.py  test_claude_transcript.py  test_install_claude.py  test_run_hook_resolves_symlink.py
tests/tracing/claude/fixtures/: main_tool_cycle.jsonl  subagent_agent.jsonl  subagent_main.jsonl
tests/tracing/codex/: test_codex_adapter.py  test_codex_buffer.py  test_codex_buffer_ctl.py  test_codex_hook.py  test_codex_proxy.py  test_codex_transcript.py  test_install_codex.py
tests/tracing/copilot/: test_copilot_adapter.py  test_copilot_hook.py  test_copilot_install.py  test_copilot_transcript.py  test_install_copilot.py
tests/tracing/cursor/: test_cursor_adapter.py  test_cursor_current_contract.py  test_cursor_hook.py  test_cursor_plugin.py  test_cursor_stdout.py  test_install_cursor.py
tests/tracing/gemini/: test_gemini_adapter.py  test_gemini_hook.py  test_gemini_install.py  test_install_gemini.py
tests/tracing/kiro/: test_kiro_adapter.py  test_kiro_constants.py  test_kiro_hook.py  test_kiro_install.py  test_kiro_installer_routers.py
tests/tracing/kiro/fixtures/probe_payloads/: agent_spawn.json  post_tool_use.json  stop.json  (+2 more)
tests/tracing/omp/: test_install_omp.py  test_omp_adapter.py  test_omp_hook.py
tests/tracing/omp/fixtures/: agent_end.json  before_agent_start.json  turn_end_basic.json  turn_end_tool_error.json
tests/tracing/opencode/: test_install_opencode.py  test_opencode_adapter.py  test_opencode_hook.py  test_opencode_plugin_runtime.py
tests/tracing/opencode/fixtures/: close_with_tool_error.json  reconcile_basic.json  subagent_session.json
tracing/antigravity/: constants.py  install.py
tracing/antigravity/hooks/: adapter.py
tracing/antigravity/skills/manage-antigravity-tracing/: SKILL.md
tracing/claude_code/: README.md  install.py  pyproject.toml
tracing/claude_code/.claude-plugin/: plugin.json
tracing/claude_code/hooks/: adapter.py  handlers.py  hooks.json  span_renderer.py  tool_buffer.py  transcript.py
tracing/claude_code/scripts/: run-hook
tracing/claude_code/skills/manage-claude-code-tracing/: SKILL.md
tracing/codex/: README.md  _toml.py  codex_buffer.py  constants.py  install.py  install_legacy.py
tracing/codex/hooks/: adapter.py  handlers.py  transcript.py
tracing/codex/skills/manage-codex-tracing/: SKILL.md
tracing/copilot/: README.md  constants.py  install.py
tracing/copilot/hooks/: adapter.py  handlers.py  transcript.py
tracing/copilot/skills/manage-copilot-tracing/: SKILL.md
tracing/cursor/: HANDOFF.md  README.md  constants.py  install.py  pyproject.toml
tracing/cursor/.cursor-plugin/: plugin.json
tracing/cursor/hooks/: adapter.py  handlers.py  hooks.json
tracing/cursor/scripts/: run-hook
tracing/cursor/skills/manage-cursor-tracing/: SKILL.md
tracing/gemini/: README.md  install.py
tracing/gemini/hooks/: adapter.py  handlers.py
tracing/gemini/skills/manage-gemini-tracing/: SKILL.md
tracing/kiro/: README.md  install.py
tracing/kiro/hooks/: adapter.py  handlers.py
tracing/kiro/skills/manage-kiro-tracing/: SKILL.md
tracing/omp/: README.md  __init__.py  constants.py  install.py
tracing/omp/hooks/: __init__.py  adapter.py  handlers.py
tracing/omp/plugin/: arize-tracing.ts
tracing/omp/skills/manage-omp-tracing/: SKILL.md
tracing/opencode/: README.md  constants.py  install.py
tracing/opencode/hooks/: adapter.py  handlers.py
tracing/opencode/plugin/: arize-tracing.ts
tracing/opencode/skills/manage-opencode-tracing/: SKILL.md
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/media/: wizard.css  wizard.js
vscode-extension/src/: bridge.ts  sidebar.ts  types.ts  wizard.ts
vscode-extension/src/__tests__/: types.test.ts  wizard.test.ts
vscode-extension/src/__tests__/__mocks__/: vscode.ts
vscode-extension/test/: bridge.test.js  sidebar.test.js  wizard-ui.test.js
(+2 files in other folders)
