[project]
name = "cursor-tracing"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
arize-hook-cursor = "tracing.cursor.hooks.handlers:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "tracing.cursor",
    "tracing.cursor.hooks",
    "core",
    "core.setup",
]
package-dir = {"tracing.cursor" = ".", "core" = "core"}
